--- a/blueprints/automation/perso/notify_abnormal_temperature_v2.yaml
+++ b/blueprints/automation/perso/notify_abnormal_temperature_v2.yaml
@@ -37,40 +37,44 @@ blueprint:
         entity:
           filter:
             device_class: temperature
+    power_notification_script:
+      name: Power notification Script
+      description: Script to use to send the abnormal temperature notification
+      selector:
+        entity:
+          filter:
+            domain: script
 
-trigger:
-  - platform: state
+triggers:
+  - trigger: state
     entity_id: !input room_temperature
-  - platform: state
+  - trigger: state
     entity_id: !input room_openings
     to: "on"
     for: !input room_openings_duration
-  - platform: state
+  - trigger: state
     entity_id: !input room_openings
     to: "off"
-  - platform: state
+  - trigger: state
     entity_id: !input outside_temperature
-  - platform: state
+  - trigger: state
     entity_id: input_number.interior_temperature_max_acceptable
-  - platform: state
+  - trigger: state
     entity_id: input_number.interior_temperature_min_acceptable
-  - platform: state
+  - trigger: state
     entity_id: input_boolean.automation_heat_home
-  - platform: homeassistant
+  - trigger: homeassistant
     event: start
     id: restart
-condition:
+conditions:
   - condition: state
     entity_id: input_boolean.automation_heat_home
     state: "on"
-action:
+actions:
   - variables:
       room_name_variable: !input room_name
       room_temp: !input room_temperature
       outside_temp: !input outside_temperature
-  - variables:
-      tag_value: |
-        {{room_name_variable|lower|replace(" ", "_")}}_trend_temperature
   - choose:
       - conditions:
           - condition: state
@@ -86,15 +90,15 @@ action:
             entity_id: !input outside_temperature
             below: !input room_temperature
         sequence:
-          - event: NOTIFIER
-            event_data:
-              action: send_to_present
-              title: ❄️ Perte de température
-              message: >-
-                {{room_name_variable}} refroidit ({{states(room_temp, with_unit=True)}}) car des fenêtres sont ouvertes il qu'il fait
-                froid dehors ({{states(outside_temp, with_unit=True)}})
-              tag: |
-                {{tag_value}}
+          - action: script.turn_on
+            target:
+              entity_id: !input power_notification_script
+            data:
+              variables:
+                user_title: ❄️ Perte de température
+                user_message: >-
+                  {{room_name_variable}} refroidit ({{states(room_temp, with_unit=True)}}) car des fenêtres sont ouvertes il qu'il fait
+                  froid dehors ({{states(outside_temp, with_unit=True)}})
           - delay:
               hours: 0
               minutes: 10
@@ -114,15 +118,15 @@ action:
             entity_id: !input outside_temperature
             above: !input room_temperature
         sequence:
-          - event: NOTIFIER
-            event_data:
-              action: send_to_present
-              title: 🌡️ Gain de température
-              message: >-
-                {{room_name_variable}} chauffe ({{states(room_temp, with_unit=True)}}) car des fenêtres sont ouvertes il qu'il fait
-                chaud dehors ({{states(outside_temp, with_unit=True)}})
-              tag: |
-                {{tag_value}}
+          - action: script.turn_on
+            target:
+              entity_id: !input power_notification_script
+            data:
+              variables:
+                user_title: 🌡️ Gain de température
+                user_message: >-
+                  {{room_name_variable}} chauffe ({{states(room_temp, with_unit=True)}}) car des fenêtres sont ouvertes il qu'il fait
+                  chaud dehors ({{states(outside_temp, with_unit=True)}})
           - delay:
               hours: 0
               minutes: 10
