--- a/automations.yaml
+++ b/automations.yaml
@@ -2593,6 +2593,7 @@
     entity_id:
     - input_select.modes_de_presence_de_la_maison_v2
     to: Occupée
+    from: Arrivée en cours
   conditions:
   - condition: state
     entity_id: input_boolean.automation_tesla
