dumest typo ever

--- a/blueprints/script/jlo/power_notification_creator.yaml
+++ b/blueprints/script/jlo/power_notification_creator.yaml
@@ -215,7 +215,7 @@ sequence:
           {
             "push":
                 {
-                  "interruption-leve": "critical"
+                  "interruption-level": "critical"
                 }
           }
         {% else %}
