--- a/automations.yaml
+++ b/automations.yaml
@@ -238,7 +238,8 @@
         metadata: {}
         data: {}
         target:
-          entity_id: cover.living_room_cover
+          entity_id:
+          - cover.volets_salon
     - conditions:
       - condition: trigger
         id:
@@ -247,7 +248,7 @@
       - action: cover.close_cover
         target:
           entity_id:
-          - cover.living_room_cover
+          - cover.volets_salon
         data: {}
   mode: single
 - id: '1688118075093'
@@ -547,66 +548,6 @@
           - scene.entree_entree_100
           - scene.cuisine_cuisine_100
   mode: single
-- id: '1688329966467'
-  alias: Volet - Edge Cases
-  description: ''
-  triggers:
-  - event_type: call_service
-    event_data:
-      domain: cover
-      action: open_cover
-      service_data:
-        entity_id: cover.living_room_cover
-    id: open
-    trigger: event
-  - event_type: call_service
-    event_data:
-      domain: cover
-      action: close_cover
-      service_data:
-        entity_id: cover.living_room_cover
-    id: closed
-    trigger: event
-  conditions:
-  - condition: or
-    conditions:
-    - condition: and
-      conditions:
-      - condition: trigger
-        id: open
-      - condition: state
-        entity_id: cover.living_room_cover
-        attribute: current_position
-        state: 100
-    - condition: and
-      conditions:
-      - condition: trigger
-        id: closed
-      - condition: state
-        entity_id: cover.living_room_cover
-        attribute: current_position
-        state: 0
-  actions:
-  - choose:
-    - conditions:
-      - condition: trigger
-        id: open
-      sequence:
-      - action: switch.turn_on
-        data: {}
-        target:
-          entity_id:
-          - switch.living_room_cover_volet_salon_bouton_up_fallback
-    - conditions:
-      - condition: trigger
-        id: closed
-      sequence:
-      - action: switch.turn_on
-        data: {}
-        target:
-          entity_id:
-          - switch.living_room_cover_volet_salon_bouton_down_fallback
-  mode: single
 - id: '1688364991944'
   alias: Bureau - Meetings VR
   description: ''
@@ -799,7 +740,7 @@
   - action: cover.open_cover
     data: {}
     target:
-      entity_id: cover.living_room_cover
+      entity_id: cover.volets_salon
   - if:
     - condition: state
       entity_id: sun.sun
@@ -1633,7 +1574,7 @@
         - action: cover.close_cover
           data: {}
           target:
-            entity_id: cover.living_room_cover
+            entity_id: cover.volets_salon
     - conditions:
       - condition: state
         entity_id: sensor.presence_simulator_current_step
@@ -1662,7 +1603,7 @@
         - action: cover.close_cover
           data: {}
           target:
-            entity_id: cover.living_room_cover
+            entity_id: cover.volets_salon
     - conditions:
       - condition: state
         entity_id: sensor.presence_simulator_current_step
@@ -1690,7 +1631,7 @@
         - action: cover.open_cover
           data: {}
           target:
-            entity_id: cover.living_room_cover
+            entity_id: cover.volets_salon
     - conditions:
       - condition: state
         entity_id: sensor.presence_simulator_current_step
@@ -1719,7 +1660,7 @@
         - action: cover.open_cover
           data: {}
           target:
-            entity_id: cover.living_room_cover
+            entity_id: cover.volets_salon
     - conditions:
       - condition: state
         entity_id: sensor.presence_simulator_current_step
@@ -1748,7 +1689,7 @@
         - action: cover.open_cover
           data: {}
           target:
-            entity_id: cover.living_room_cover
+            entity_id: cover.volets_salon
     - conditions:
       - condition: state
         entity_id: sensor.presence_simulator_current_step
@@ -1777,7 +1718,7 @@
         - action: cover.open_cover
           data: {}
           target:
-            entity_id: cover.living_room_cover
+            entity_id: cover.volets_salon
   mode: single
 - id: '1702164245946'
   alias: Routine du sommeil Marilou - Changer heure fin de routine
@@ -4415,6 +4356,9 @@
     - input_select.modes_de_presence_de_la_maison_v2
   - trigger: homeassistant
     event: start
+  - trigger: state
+    entity_id:
+    - light.voicekit_salon_dvt_led_ring
   conditions: []
   actions:
   - if:
@@ -4645,7 +4589,7 @@
         metadata: {}
         data: {}
         target:
-          entity_id: cover.living_room_cover
+          entity_id: cover.volets_salon
       - action: switch.turn_on
         metadata: {}
         data: {}
@@ -4682,7 +4626,7 @@
         metadata: {}
         data: {}
         target:
-          entity_id: cover.living_room_cover
+          entity_id: cover.volets_salon
       - action: media_player.turn_off
         metadata: {}
         data: {}
